--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -255,6 +255,7 @@
 
     <!-- The application JavaScript code -->
     <script src="js/app.js"></script>
+    <script src="js/controllers/motherController.js"></script>
     <script src="js/model/dinnerModel.js"></script>
     <script src="js/view/viewStartPage.js"></script>
     <script src="js/controllers/startPageController.js"></script>    
