tillbaka på ruta ett all var kaos innan

--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -262,10 +262,10 @@
     <script src="js/view/viewAllDishes.js"></script>
 <!--     // <script src="js/view/viewMyDinnerLeft.js"></script> -->
     <script src="js/controllers/allDishesController.js"></script>
-    // <!-- <script src="js/controllers/myDinnerController.js"></script>
-    // <script src="js/view/viewRecipeDetails.js"></script>
-    // <script src="js/controllers/recipeDetailsController.js"></script>
-    // <script src="js/view/viewDinnerOverview.js"></script>
+<!--     // <script src="js/controllers/myDinnerController.js"></script> -->
+    <script src="js/view/viewRecipeDetails.js"></script>
+    <script src="js/controllers/recipeDetailsController.js"></script>
+<!--     // <script src="js/view/viewDinnerOverview.js"></script>
     // <script src="js/controllers/dinnerOverviewController.js"></script>
     // <script src="js/view/viewDinnerBorder.js"></script>
     // <script src="js/controllers/dinnerBorderController.js"></script>
