--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -265,11 +265,11 @@
     <script src="js/controllers/allDishesController.js"></script>
     <script src="js/view/viewRecipeDetails.js"></script>
     <script src="js/controllers/recipeDetailsController.js"></script>
-<!--     // <script src="js/view/viewDinnerOverview.js"></script>
-    // <script src="js/controllers/dinnerOverviewController.js"></script>
-    // <script src="js/view/viewDinnerBorder.js"></script>
-    // <script src="js/controllers/dinnerBorderController.js"></script>
-    // <script src="js/view/viewPrintDinner.js"></script> -->
+    <script src="js/view/viewDinnerOverview.js"></script>
+    <script src="js/controllers/dinnerOverviewController.js"></script>
+    <script src="js/view/viewDinnerBorder.js"></script>
+    <script src="js/controllers/dinnerBorderController.js"></script>
+    <!--// <script src="js/view/viewPrintDinner.js"></script> -->
     <!-- <script src="js/view/exampleViewController.js"></script> -->
 </body>
 </html>
