--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -269,7 +269,7 @@
     <script src="js/controllers/dinnerOverviewController.js"></script>
     <script src="js/view/viewDinnerBorder.js"></script>
     <script src="js/controllers/dinnerBorderController.js"></script>
-    <!--// <script src="js/view/viewPrintDinner.js"></script> -->
+    <script src="js/view/viewPrintDinner.js"></script>
     <!-- <script src="js/view/exampleViewController.js"></script> -->
 </body>
 </html>
