--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -68,8 +68,8 @@
                                     </thead>
                                     <tbody id = "dishNameAndCostTBody">
                                         <tr id ="dishNameAndCostTR1">
-                                            <td id="dishName" >Pending</td>
-                                            <td colspan = "2" id="dishCost">0.00</td>
+<!--                                             <td id="dishName" >Pending</td>
+                                            <td colspan = "2" id="dishCost">0.00</td> -->
                                         </tr>
                                     </tbody>
                                 </table>
