changed location of buttons ingredientsList

--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -114,7 +114,7 @@
                             </div>  
                         </section>
 
-                        <div id="separatorDiv"></div>
+                   <!--      <div id="separatorDiv"></div> -->
                         <section id= "menuScroll">
                             <div class="row" id= "menuScroll">
                                 <div class="col-md-2" id="colOne">   
@@ -145,19 +145,19 @@
                                 <div class="col-md-12" id="imageOfChosenDish">
                                 </div>
                             </div>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-md-12">
                                     <button class="btn" id="backButton">Back to select dish</button>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="row">
                                 <div class="col-md-12">
                                     <h3>Preparations</h3>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-12">
-                                    <p id = "description">Lorem impsum...</p>
+                                <div class="col-md-12" id = "description">
+                                    <p id = "descriptionText">Lorem impsum...</p>
                                 </div>
                             </div>
                         </div>
@@ -180,14 +180,19 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6">
-                                    <button class="btn" id="confirmDishButton">Confirm Dish</button>
-                                </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-md-offset-3">
                                     <p> Total cost </p>
                                 </div>
-                                <div class="col-md-3" id="costDish">
+                                <div class="col-md-3 col-md-offset-3" id="costDish">
                                     <p id = "totalCostViewDish"> </p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3 col-md-offset-1">
+                                    <button class="btn" id="backButton">Back to select dish</button>
+                                </div>
+                                <div class="col-md-3 col-md-offset-2">
+                                    <button class="btn" id="confirmDishButton">Confirm Dish</button>
                                 </div>
                             </div>
                         </div>
