--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -7,10 +7,12 @@
     <title>Homelette - Create Dinner</title>
     <link rel="icon" type="image/png" href="///Users/liza/Documents/Programmeringskurser/DH2641:DH2642%20Interaktionsprogramemring/labb2/interaktionsprogrammering//images/favicon.png" />
 
+    <!-- jQuery -->
+    <script src="js/bib/jquery-2.1.3.js"></script>
+
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="styling.css"> -->
+    <link rel="stylesheet" type="text/css" href="js/bib/bootstrap-3.3.2-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="js/bib/font-awesome-4.3.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
 
 </head>
@@ -251,10 +253,6 @@
         </div> <!--  bodyAllPagesClosed -->
 
     </div>
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
     <!-- The application JavaScript code -->
     <script src="js/app.js"></script>
